[package]
name = "server-runner"
version = "1.4.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/webcodr/server-runner"
repository = "https://github.com/webcodr/server-runner"
documentation = "https://github.com/webcodr/server-runner"
readme = "README.md"
description = "Runs servers, checks for HTTP 200 and runs a command when all servers are up and running"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
config = "0.14.0"
ctrlc = "3.4.4"
log = "0.4.19"
reqwest = { version = "0.12.8", features = [
  "blocking",
  "native-tls-vendored",
] }
serde = { version = "1", features = ["derive"] }
simplelog = "0.12.1"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
