[package]
name = "server-runner"
version = "1.6.0"
edition = "2024"
license-file = "LICENSE"
homepage = "https://github.com/webcodr/server-runner"
repository = "https://github.com/webcodr/server-runner"
documentation = "https://github.com/webcodr/server-runner"
readme = "README.md"
description = "Runs servers, checks for HTTP 200 and runs a command when all servers are up and running"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
config = "0.15.11"
ctrlc = "3.4.7"
log = "0.4.27"
reqwest = { version = "0.12.19", features = [
    "blocking",
    "native-tls-vendored",
] }
serde = { version = "1", features = ["derive"] }
shlex = "1.3.0"
simplelog = "0.12.2"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
